// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Radio Group Component Tests should render correctly 1`] = `
<DocumentFragment>
  <div
    class="antv-s2-radio-group"
  >
    <span
      class="antv-s2-radio-group-label"
    />
    <span
      class="antv-s2-radio-group-content"
    >
      <div
        class="ant-radio-group ant-radio-group-outline ant-radio-group-small css-dev-only-do-not-override-3rel02"
      />
    </span>
  </div>
</DocumentFragment>
`;

exports[`Radio Group Component Tests should render custom options 1`] = `
<DocumentFragment>
  <div
    class="antv-s2-radio-group"
  >
    <span
      class="antv-s2-radio-group-label"
    >
      类型
    </span>
    <span
      class="antv-s2-radio-group-content"
    >
      <div
        class="ant-radio-group ant-radio-group-solid ant-radio-group-small css-dev-only-do-not-override-3rel02"
      />
    </span>
  </div>
</DocumentFragment>
`;

exports[`Radio Group Component Tests should render icon only 1`] = `
<DocumentFragment>
  <div
    class="antv-s2-radio-group antv-s2-radio-group-icon-only"
  >
    <span
      class="antv-s2-radio-group-label"
    />
    <span
      class="antv-s2-radio-group-content"
    >
      <div
        class="ant-radio-group ant-radio-group-outline ant-radio-group-small css-dev-only-do-not-override-3rel02"
      />
    </span>
  </div>
</DocumentFragment>
`;
